// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getColumnSizeStyles Get a correct column size styles 1`] = `
Object {
  "general": Object {
    "flex-basis": "1%",
    "width": "1%",
  },
  "l": Object {
    "flex-basis": "4%",
    "width": "4%",
  },
  "m": Object {
    "flex-basis": "1%",
    "width": "1%",
  },
  "s": Object {
    "flex-basis": "2%",
    "width": "2%",
  },
  "xl": Object {
    "flex-basis": "3%",
    "width": "3%",
  },
  "xs": Object {
    "flex-basis": "3%",
    "width": "3%",
  },
  "xxl": Object {
    "flex-basis": "2%",
    "width": "2%",
  },
}
`;

exports[`getColumnSizeStyles Get a correct column size styles with some fit-content 1`] = `
Object {
  "general": Object {
    "flex-basis": "1%",
    "width": "1%",
  },
  "l": Object {
    "flex-basis": "fit-content",
    "width": "fit-content",
  },
  "s": Object {
    "flex-basis": "2%",
    "width": "2%",
  },
  "xl": Object {
    "flex-basis": "3%",
    "width": "3%",
  },
  "xs": Object {
    "flex-basis": "fit-content",
    "width": "fit-content",
  },
  "xxl": Object {
    "flex-basis": "2%",
    "width": "2%",
  },
}
`;
